<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bg_color"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".UploadImageStoryActivity" >

    <LinearLayout
        android:id="@+id/top_panel"
        android:layout_width="match_parent"
        android:layout_height="80dip"
        android:layout_marginBottom="10dip"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginTop="15dip"
        android:background="@drawable/layout_border"
        android:orientation="horizontal" >

        <com.netpace.expressit.android.ui.TypefaceEditText
            android:id="@+id/story_title_txt_field"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dip"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:gravity="center_vertical|top|start"
            android:hint="@string/story_title"
            android:inputType="textMultiLine"
            android:lines="3"
            android:textAlignment="textStart"
            android:textColor="@color/text_hint_color"
            android:textColorHint="@color/text_hint_color"
            android:textColorLink="@color/text_hint_color"
            android:textSize="14sp"
            custom:typeface="HelveticaNeue-Medium" >

            <requestFocus />
        </com.netpace.expressit.android.ui.TypefaceEditText>

        <RelativeLayout
            android:id="@+id/vide_player_panel"
            android:layout_margin="10dip"
            android:layout_width="@dimen/media_obj_wh"
            android:layout_height="@dimen/media_obj_wh" >

            <com.ad.videorecorderlib.ui.ADCustomVideoView
                android:id="@+id/videoView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:onClick="showVideoOptionsDialog" />

            <Button
                android:id="@+id/playButton"
                android:layout_width="40dip"
                android:layout_height="40dip"
                android:gravity="center"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:background="@drawable/ic_play" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottom_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/top_panel"
        android:layout_marginBottom="10dip"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:background="@drawable/layout_border"
        android:orientation="horizontal" >

        <com.netpace.expressit.android.ui.TypefaceEditText
            android:id="@+id/story_desc_txt_field"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dip"
            android:background="@android:color/transparent"
            android:gravity="center_vertical|top|start"
            android:hint="@string/story_desc"
            android:inputType="textMultiLine"
            android:lines="5"
            android:textAlignment="textStart"
            android:textColor="@color/text_hint_color"
            android:textColorHint="@color/text_hint_color"
            android:textColorLink="@color/text_hint_color"
            android:textSize="14sp"
            custom:typeface="HelveticaNeue-Medium" />
    </LinearLayout>

    <Button
        android:id="@+id/shareButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bottom_panel"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dip"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginTop="3dip"
        android:text="@string/button_share" />

</RelativeLayout>